--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,10 @@ a:link, a:visited, a:hover, a:active {
   color: rgba(0,0,0,1);
 }
 
+i{
+  cursor: pointer;
+}
+
 /* header */
 header{
   height: 60px;
@@ -66,7 +70,7 @@ header > *{
   text-decoration: none;
 }
 
-.start-btn{
+.btn-to-post{
   width:100px;
   font-size:15px;
   text-align:center;
@@ -89,13 +93,25 @@ header > *{
 .post-item{
   padding: 0 10px;
   border: solid;
-  border-color: var(--main-color);
+  border-color: rgba(0, 0, 0, 1);
   border-radius: 5px;
   grid-column: 2/3;
 }
 
 .post-item > p{
-  word-break: normal;
+  word-break: break-word;
+}
+
+.post-item > i{
+  float: right;
+}
+
+hr{
+  border-top: 1px dashed #bbb;
+}
+
+.heart{
+  color: rgb(255, 0, 0);
 }
 /* new post */
 .new-post{
@@ -116,11 +132,13 @@ header > *{
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 60vw;
+  width: 80vw;
   height: 40vw;
   display: grid;
   grid-template-columns: 5vw 1fr 5vw;
-  grid-template-rows: 5vw 1fr;
+  grid-template-rows: 3vw 1fr 3vw;
+  border-radius: 5px;
+  border-style: solid;
 }
 
 form{
@@ -129,9 +147,53 @@ form{
   display: grid;
   grid-template-rows: 3fr 3fr 1fr;
   row-gap: 5px;
+  margin-block-end: 0;
+}
+
+form > * {
+  border-radius: 5px;
+  border-color: rgba(0, 0, 0, 1);
+}
+
+form > button{
+  background-color: rgba(255, 255, 255, 1);
+  font-weight: bold;
+  width: 50%;
+  justify-self: center;
+  cursor: pointer;
+}
+
+form > textarea{
+  border-width: 2px;
+  font-size: 17px;
 }
 
 .close-btn{
   grid-row: 1/2;
   grid-column: 3/4;
 }
+
+/* note */
+
+.no-item{
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.no-item > a{
+  text-decoration: none;
+}
+
+.no-item > h2 > a{
+  width: 100px;
+  font-size: 15px;
+  text-align: center;
+  display: block;
+  padding: 10px 0 10px;
+  background: rgba(0,0,0,1);
+  border-radius: 20px;
+  color: rgba(255, 255, 255, 1);
+} 
